<resources>
    <string name="app_name">Swipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Comments</string>
    <string name="sync_header">Notifications</string>
    <string name="followed_news_mode_title">Follows</string>
    <string name="recommended_news_mode_title">Recommended</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Notifications about new posts</string>
    <string name="attachment_title">Notifications about follows</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="publics">Группы</string>
    <string name="news">Новости</string>
    <string name="create">Создать</string>
    <string name="more">Ещё</string>
    <string name="account">Аккаунт</string>
    <string name="recommendations">Recommendations</string>
    <string name="follows">Follows</string>
    <string name="edit_profile">Изменить</string>
    <string name="my_follows">My Follows</string>
    <string name="my_publics">My Publics</string>
    <string name="description">Description</string>
    <string name="my_nickname">My Nickname</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil rerum quidem illum expedita quod neque iure rem impedit iste id nisi, at doloremque, voluptatum optio voluptates est dolorum.</string>
    <string name="get_started">Начать</string>
    <string name="sign_out">Выйти</string>
    <string name="internet_exception">java.net.SocketTimeoutException: failed to connect to /10.0.2.2 (port 8080) after 2000ms</string>
    <string name="post_publisher_name_placeholder">Publisher Name</string>
    <string name="promo">Swipes - это новая платформа, которая обновляет опыт использования и взаимодействия с фотографиями и социальными медиа, используя философию карточек. \nКаждый Swipe будет предоставлять новые, короткие и информативные новости или знания, которые изменят опыт использования социальных сетей и потребления текстового контента.</string>
    <string name="preferences">Preferences</string>
    <string name="disable_notifications">Выключить уведомления</string>
    <string name="get_posts">Get Posts</string>
    <string name="publisher_description">Publisher Description</string>
    <string name="description_placeholder">Описание</string>
    <string name="publisher_name">Publisher Name</string>
    <string name="search">Поиск</string>
    <string name="created_by">Created by:</string>
    <string name="public_name_edit">Название сообщества</string>
    <string name="public_description_edit">Описание</string>
    <string name="add_new_publisher">Добавить</string>
    <string name="pick">Выбрать</string>
    <string name="send">Отправить</string>
    <string name="info">Информация о профиле</string>
    <string name="change">Изменить</string>
    <string name="email">Email:</string>
    <string name="nick">Псевдоним:</string>
    <string name="desc">Описание:</string>

</resources>